--- a/styles/less/mission.less
+++ b/styles/less/mission.less
@@ -3,6 +3,7 @@ text-align: center;
 background-color: #cccccc;
 background-image: url(/resources/smooth.jpg);
 border: solid .1rem black;
+
 @media @mobile{
     margin: 0 1rem;
 }
@@ -20,15 +21,8 @@ p{
 }
 }
 button{
-    background-color:#E800FF;
-    border-style: none;
-    border-radius: 1.5rem;
-    font-size: 2rem;
-    color: white;
-    margin-bottom: 2rem;
+    .button();
 }
 button:hover {
-   background-color: white;
-   color:#E800FF;  
+    .invertbutton()
 }
-
