--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -9,14 +9,20 @@
 margin: 2rem auto;
     }
     p{
-        margin: 0 1rem;
+        margin: 1rem 1rem;
     }
   .card{
      text-align: center;
       justify-content: center;
       width:100%;
-      
-    
+    h2{
+        margin-top: 1rem;
+    }  
+    button{
+      .button();
   }
- 
+  button:hover {
+     .invertbutton();
+} 
+}
 }
