--- a/styles/less/mixins.less
+++ b/styles/less/mixins.less
@@ -9,4 +9,25 @@
         
     }
     
-    };
+};
+.button(){
+    background-color:#E800FF;
+    border-style: none;
+    border-radius: 1.5rem;
+    font-size: 2rem;
+    color: white;
+    margin-bottom: 2rem;
+    a{
+        text-decoration:none;
+        color:white;
+    }
+};
+.invertbutton(){
+    background-color: white;
+   
+    a{
+     text-decoration:none;
+     color:#E800FF; 
+    } 
+};
+
